refactor: replace poems by lorem ipsum and add template title page

--- a/poetex/latex/templates/main.tex
+++ b/poetex/latex/templates/main.tex
@@ -1,17 +1,10 @@
 \documentclass[11pt, a4paper]{article}
-\usepackage{pdfcolparallel}
-\usepackage[english, brazil]{babel}
+\usepackage[english]{babel}
 \usepackage[utf8]{inputenc}
-\usepackage{lipsum}
-\usepackage{verse}
 \usepackage[T1]{fontenc}
-\usepackage{libertine}
-\setlength{\parindent}{0pt}
-\newcommand{\poemdate}[1]{\nopagebreak{\raggedleft\footnotesize\textsc{#1}\par}}
-\renewcommand{\poemtitlefont}{\normalfont\bfseries\large\centering}
-\setlength{\stanzaskip}{0.75\baselineskip}
-\pagestyle{empty} % Stop page numbering through the document
-
+\usepackage{verse} % Package for poem support
+\usepackage{pdfcolparallel} % For bilingual editions
+\usepackage{libertine} % You may change the font
 \begin{document}
 
 % Title page
