feat: add prototype of poem entry

--- a/poetex/latex/templates/main.tex
+++ b/poetex/latex/templates/main.tex
@@ -6,7 +6,7 @@
 \usepackage{pdfcolparallel} % For bilingual editions
 \usepackage{libertine} % You may change the font
 \usepackage[backend=bibtex,style=numeric]{biblatex}
-\DeclareBibliographyAlias{poem}{inbook} % Define @poem entry type
+\DeclareBibliographyAlias{poem}{inbook} % Define @poem entry type, it does not work properly though
 \addbibresource{references.bib}
 
 \begin{document}
