--- a/poetex/latex/templates/references.bib
+++ b/poetex/latex/templates/references.bib
@@ -1,4 +1,26 @@
+# "Ideal"" entry
 @poem{PoemAuthorYear,
+    author = {Author, A.},
+    title = {Title of the Poem},
+    booktitle = {Title of the Collection},
+    publisher = {Publisher},
+    year = {Year},
+    editor = {Editor, E.},
+    volume = {Volume},
+    number = {Number},
+    series = {Series},
+    pages = {123-145},
+    address = {City},
+    edition = {Edition},
+    month = {Month},
+    note = {Additional notes},
+    key = {Key},
+    source = {Medium if not a book},
+    url = {https://www.bibtex.org/}
+}
+
+# Current entry
+@inbook{BookAuthorYear,
     author = {Author, A.},
     title = {Title of the Poem},
     booktitle = {Title of the Collection},
